# silent_direction

./: .gitignore  LICENSE  README.md  benchmark.ipynb  find_norm_direction.ipynb  find_norm_direction_v2.ipynb  find_principle_direction.ipynb  process_info.sh  pyproject.toml  redundancy_direction.ipynb  results.json  run_all_benchmarks.py  run_all_norm.py  run_all_norm_ablations.py  run_all_norm_dual.py  run_all_norm_hinge.py  run_all_norm_sbatch.py  run_all_norm_target_kl.py  run_all_principal.py  run_all_principal_sbatch.py  run_sbatch.sh  run_summariaze_all.py
analysis/: analyze_NO_Deg_PRO PLUS!!!!!.ipynb  analyze_PRO PLUS!!!!.ipynb  analyze_PRO!!!!.ipynb  create_generative_tasks_variance.ipynb  create_logprob_tasks_variance.ipynb  create_logprob_tasks_variance_exact.ipynb  generative_tails.json  visualize_tasks_barplots.ipynb
notebooks/: analyze_benchmarks copy.ipynb  analyze_benchmarks.ipynb  analyze_benchmarks_clean_temperature.ipynb  analyze_benchmarks_improved_more.ipynb  analyze_benchmarks_improved_more_Pro.ipynb  analyze_benchmarks_random_directions.ipynb  analyze_norm.ipynb  null_space.ipynb  test.ipynb  test_model.ipynb
scripts/: benchmark.py  benchmark_clean.py  evaluate.py  evaluation.py  experiment.py  run_norm.py  run_norm_dual.py  run_norm_hinge.py  run_norm_target.py  run_norm_target_kl.py  run_norm_target_l2.py  run_principal.py  run_principal_target.py  summarize.py  summarize_logprobs.py
src/: activ_extractor.py  activ_manipulator.py  activation_extractor.py  aliases.py  config.py  data.py  evaluate.py  functional.py  losses.py  metrics.py  (+6 more)
(+426 files in other folders)
